--- a/css/estilos.css
+++ b/css/estilos.css
@@ -99,3 +99,59 @@ body{
     width: 100%;
     height: 150px;
 }
+
+/**************************************************************************************************************/
+/********************************************** Presentacion ****************************************************/
+/**************************************************************************************************************/
+
+.presentacion{
+    padding-top: 0;
+    text-align: center;
+}
+.presentacion__foto{
+    width: 250px;
+    height: 250px;
+    border-radius: 50%;
+    margin-bottom: 10px;
+    object-fit: cover; /*la imagen cubrira el espacio*/
+    object-position: top;/*inicie desde arriba la foto*/
+}
+.presentacion__p{
+    width: 80%;
+    margin: 0 auto;
+}
+.presentacion__cta{
+    display: inline-block;
+    margin-top: 30px;
+    background: var(--color-primario);
+    color: #fff;
+    text-decoration: none;
+    padding: var(--boton-padding);
+    border-radius: 40px;
+}
+.about{
+    min-height: 400px;
+    display: grid; /*Se crea un acuadricula*/
+    grid-template-columns: 1fr 1fr; /*se crean dos columnas*/
+    row-gap: 80px; /*espacio entre filas*/
+}
+.about__imagen{ /*contenedor de imagen*/
+    text-align: center;
+}
+.about__imagen--left{
+    text-align: left;
+}
+.about__img{
+    width: 80%;
+}
+.about__parrafo{
+    margin-bottom: 20px;
+    line-height: 1.5;
+    font-weight: 300;
+}
+
+/**************************************************************************************************************/
+/********************************************** Proyectos ****************************************************/
+/**************************************************************************************************************/
+
+
