--- a/css/estilos.css
+++ b/css/estilos.css
@@ -63,6 +63,9 @@ body{
 }
 .nav__item--footer{
     padding: 10px;
+    color: #fff;
+    font-weight: 500;
+    text-decoration: none;
 }
 
 .encabezado__contenedor{
@@ -225,8 +228,251 @@ body{
 }
 
 /**************************************************************************************************************/
-/********************************************** Proyectos ****************************************************/
+/********************************************** Testimonios ****************************************************/
 /**************************************************************************************************************/
 
+.testimonios__grid{
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 30px;
+}
+
+.testimonio__item{
+    width: 95%;
+    margin: 0 auto;
+    background: var(--color-secundario);
+    box-shadow: 0 8px 10px rgba(66,66,66,0.5);
+    border-radius: 7px;
+    padding: 30px 25px;
+    color: #fff;
+    margin-bottom: 50px;
+}
+
+.testimonio__persona{
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.testimonio__img{
+    width: 100px;
+    min-width: 100px;
+    height: 100px;
+    object-fit: cover;
+    object-position: top;
+    border-radius: 50%;
+    border: 3px solid#fff;
+    margin-right: 30px;
+}
+
+.testimonio__nombre{
+    font-size: 1.5rem;
+    margin-bottom: 10px;
+}
+
+.testimonio__verificacion{
+    color: #eee;
+    font-weight: 700;
+}
+.testimonio__review{
+    font-weight: 300;
+}
 
 
+/**************************************************************************************************************/
+/********************************************** Footer ****************************************************/
+/**************************************************************************************************************/
+
+.footer{
+    background: var(--color-primario);
+}
+.footer__grid{
+    display: grid;
+    grid-template-columns: 3fr 2fr;
+    gap: 20px;
+    align-items: center;
+}
+
+.footer__titulo{
+    font-weight: 400;
+    color: #fff;
+    font-size: 2rem;
+    margin-bottom: 30px;
+    text-align: center;
+}
+
+.footer__iconos{
+    display: flex;
+    justify-content: space-around;
+}
+
+.footer__contenedor-icono{
+    display: inline-block;
+    width: 60px;
+    height: 60px;
+    color: #fff;
+    text-align: center;
+    border: 1px solid #fff;
+    border-radius: 50%;
+}
+
+.red-social{
+    color: inherit;
+    font-size: 30px;
+    text-decoration: none;
+}
+
+.fab.red-social{ /*se pone junto por que estan en una misma clase*/
+    line-height: 60px; /*Que es lo que tiene su contenedor*/
+}
+
+
+
+/**************************************************************************************************************/
+/******************************************* Responsive Design ****************************************************/
+/**************************************************************************************************************/
+
+@media screen and (max-width: 800px) {
+    :root{
+        --boton-padding: 18px 40px;
+    }
+    .nav{
+        justify-content: space-around;
+    }
+    .nav__item--cta{
+        border: none;
+    }
+    .nav__item{
+        font-weight: 400;
+        border-bottom: 1px solid#fff;
+        margin-right: 0;
+    }
+    .nav__item--footer{
+        border: none;
+    }
+
+    /* Encabezado */
+    .contenedor__texto{
+        width: 100%;
+        margin-bottom: 80px;
+    }
+    .encabezado__titulo{
+        font-size: 2.5rem;
+    }
+    .encabezado__subtitulo{
+        font-size: 1.5rem;
+    }
+
+    /* About */
+
+    .presentacion__p{
+        width: 100%;
+    }
+
+    .about{
+        grid-template-columns: 1fr;
+    }
+
+    .about.contenedor{
+        padding-top: 30px;
+    }
+    .about__imagen--left{
+        text-align: center;
+    }
+    .about__texto:last-child{
+        grid-row: 3/4; /*que el ultimo hijo se posicione en las lineas*/
+    }
+
+    /* Proyectos */
+    
+    .proyectos__grid{
+        grid-template-areas: 
+        "img1 img1 im2 img2"
+        "img1 img1 im3 img3"
+        "img4 img4 im5 img5";
+    }
+
+    /* Testimonios */
+    .testimonios__grid{
+        grid-template-columns: 1fr;
+        gap: 30px;
+    }
+
+    /* footer */
+    .footer__grid{
+        grid-template-columns: 1fr;
+    }
+    .footer__contacto{
+        grid-row: 1/2;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    :root{
+        --boton-padding: 18px 35px;
+    }
+    .subtitulo{
+        font-size: 2rem;
+        margin-bottom: 20px;
+    }
+    .nav{
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+        margin-top: 10px;
+    }
+    .nav__item{
+        padding: 0 10px;
+        border: 0;
+    }
+
+    .contenedor__texto{
+        text-align: center;
+        margin-bottom: 100px;
+    }
+    .encabezado__titulo{
+        font-size: 2rem;
+    }
+
+    /* abput */
+    .presentacion__foto{
+        width: 120px;
+        height: 120px;
+    }
+    .about{
+        row-gap: 60px;
+    }
+
+    .about.contenedor{
+        padding-top: 10px;
+    }
+
+    /* Proyectos */
+    .proyectos__grid{
+        grid-template-areas: 
+        "img1"
+        "img2"
+        "img3"
+        "img4"
+        "img5";
+        height: auto;
+        grid-template-rows: repeat(5, 250px);
+        grid-auto-rows: 250px;
+        gap: 10px;
+    }
+
+    /* Testimonios */
+    .testimonio__item{
+        padding: 30px 15px;
+    }
+    .testimonio__persona{
+        flex-direction: column;
+    }
+    .testimonio__texto{
+        text-align: center;
+    }
+    .testimonio__img{
+        margin: 0;
+        margin-bottom: 20px;
+    }
+}
